--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,7 +105,7 @@ if(WITH_GUI)
         set(Missing_package "TRUE")
         if(APPLE AND CMAKE_HOST_APPLE)
             message(STATUS "To install qt5 on MacOS using homebrew run following command:")
-            message(STATUS "    brew install qt5")
+            message(STATUS "    brew install qt")
         endif(APPLE AND CMAKE_HOST_APPLE)
     endif(Qt5Widgets_FOUND)
     find_package(Qt5Concurrent)
