--- a/include/hal_version.h.in
+++ b/include/hal_version.h.in
@@ -21,8 +21,7 @@
 //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 //  SOFTWARE.
 
-#ifndef __HAL_VERSION_H__
-#define __HAL_VERSION_H__
+#pragma once
 
 #include <string>
 
@@ -59,5 +58,3 @@ namespace hal_version
     const std::string build_timestamp = "@BUILD_TIMESTAMP@";
 
 }
-
-#endif    // __HAL_VERSION_H__
