--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(NOT CMAKE_BUILD_TYPE)
     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     message(STATUS "selected build type: ${CMAKE_BUILD_TYPE}")
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "selected build type: ${CMAKE_BUILD_TYPE}")
@@ -19,7 +19,7 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
     message(STATUS "selected build type: ${CMAKE_BUILD_TYPE}")
 else()
     message(FATAL_ERROR "unsupported build type: ${CMAKE_BUILD_TYPE}, supported are: Debug, MinSizeRel, RelWithDebInfo, Release")
-endif ()
+endif()
 
 if(UNIX AND NOT APPLE)
     set(LINUX TRUE)
@@ -248,21 +248,24 @@ if(HAVE_IGRAPH)
     add_definitions(-DIGRAPH_VERSION_PATCH_GUESS=${IGRAPH_VERSION_PATCH_GUESS})
 endif(HAVE_IGRAPH)
 
-set(Boost_USE_MULTITHREADED ON)
-find_package(Boost 1.58.0 COMPONENTS system filesystem graph REQUIRED)
-if(Boost_FOUND)
-    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
-    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
-    message(STATUS "Boost_VERSION: ${Boost_VERSION}")
-
-    include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
-elseif(NOT Boost_FOUND)
-    set(Missing_package "TRUE")
-    if(APPLE AND CMAKE_HOST_APPLE)
-        message(STATUS "To install boost on MacOS using homebrew run following command:")
-        message(STATUS "    brew install boost --c++11")
-    endif(APPLE AND CMAKE_HOST_APPLE)
-endif(Boost_FOUND)
+find_package(Filesystem REQUIRED)
+#if(NOT (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
+#    set(Boost_USE_MULTITHREADED ON)
+#    find_package(Boost 1.58.0 COMPONENTS system filesystem graph REQUIRED)
+#    if(Boost_FOUND)
+#        message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
+#        message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
+#        message(STATUS "Boost_VERSION: ${Boost_VERSION}")
+#
+#        include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
+#    elseif(NOT Boost_FOUND)
+#        set(Missing_package "TRUE")
+#        if(APPLE AND CMAKE_HOST_APPLE)
+#            message(STATUS "To install boost on MacOS using homebrew run following command:")
+#            message(STATUS "    brew install boost --c++11")
+#        endif(APPLE AND CMAKE_HOST_APPLE)
+#    endif(Boost_FOUND)
+#endif()
 
 #find_package(Threads REQUIRED)
 
