--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB_RECURSE CORE_LIB_SRC ${CMAKE_SOURCE_DIR}/src/core/*.cpp)
 
 add_library(${CORE_LIB} SHARED ${CORE_LIB_HDR} ${CORE_LIB_HDR} ${CORE_LIB_SRC} ${CMAKE_BINARY_DIR}/hal_version.h)
 set_target_properties( PROPERTIES DEFINE_SYMBOL BUILDING_CORE)
-target_link_libraries(${CORE_LIB} ${CMAKE_DL_LIBS} ${Boost_LIBRARIES})
+target_link_libraries(${CORE_LIB} ${CMAKE_DL_LIBS} ${Boost_LIBRARIES} std::filesystem)
 install(TARGETS ${CORE_LIB} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     add_sanitizers(${CORE_LIB})
