Final update to pybind11 v2.4.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,16 +271,16 @@ find_package(RapidJSON REQUIRED)
 message(STATUS "Found rapidjson ${RAPIDJSON_INCLUDEDIR}")
 include_directories(${RAPIDJSON_INCLUDEDIR})
 
-# Need Version 2.2.4 Not available in ubuntu bionic
-#find_package(pybind11 2.2.4 CONFIG)
-#if(${pybind11_FOUND})
-#    message(STATUS "Found pybind11 v${pybind11_VERSION}: ${pybind11_INCLUDE_DIRS}")
-#    message(STATUS "Found pybind11 >= 2.2.4")
-#    include_directories(pybind11_INCLIDE_DIRS)
-#else()
-    message(STATUS "pybind11 >= 2.2.4 not found")
+# Need Version 2.4.3 Not available in ubuntu bionic
+find_package(pybind11 2.4.3 CONFIG)
+if(${pybind11_FOUND})
+   message(STATUS "Found pybind11 v${pybind11_VERSION}: ${pybind11_INCLUDE_DIRS}")
+   message(STATUS "Found pybind11 >= 2.4.3")
+   include_directories(pybind11_INCLIDE_DIRS)
+else()
+    message(STATUS "pybind11 >= 2.4.3 not found")
     add_subdirectory(deps/pybind11)
-#endif()
+endif()
 
 find_package(spdlog 1.3.1 EXACT CONFIG)
 message(STATUS "Found spdlog v${spdlog_VERSION}")
