--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,5 +31,5 @@ endif()
 #add_subdirectory(basic_tests)
 add_subdirectory(core)
 add_subdirectory(netlist)
-add_subdirectory(hdl_parser)
+#add_subdirectory(hdl_parser)
 add_subdirectory(hdl_writer)
