--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Clean Brew
+        if: startsWith(runner.os, 'macOS')
         run: brew cleanup
 
       - name: Cache pip Linux
@@ -44,6 +45,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Cache Homebrew Downloads
+        if: startsWith(runner.os, 'macOS')
         uses: actions/cache@v1
         with:
           path: ~/Library/Caches/Homebrew
@@ -54,6 +56,7 @@ jobs:
             ${{ runner.OS }}-build-downloads-
 
       - name: Cache Homebrew
+        if: matrix.os == 'macOS-latest'
         uses: actions/cache@v1
         with:
           path: /usr/local/Homebrew
